# LearnopenGLPractice

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: BallObject.hpp  Game.hpp  GameLevel.hpp  GameObject.hpp  HeadFile.hpp  ParticleGenerator.hpp  PostProcessor.hpp  PowerUp.hpp  ResourceManager.hpp  Shader.hpp  SpriteRenderer.hpp  TextRenderer.hpp  Texture.hpp
lib/assimp/port/jassimp/jassimp/src/jassimp/: AiTextureType.java
lib/assimp/samples/SimpleAssimpViewX/: MyDocument.mm
lib/assimp/samples/SimpleOpenGL/: Sample_SimpleOpenGL.c
lib/assimp/tools/assimp_view/: Material.cpp
lib/freetype/objs/: freetype.exp
lib/freetype/objs/x64/Debug/: freetype.dll.recipe  freetype.ilk  freetype.vcxproj.FileListAbsolute.txt
lib/freetype/objs/x64/Debug/freetype.tlog/: CL.15452.write.1.tlog  CL.command.1.tlog  CL.read.1.tlog  Cl.items.tlog  freetype.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
shader/: postprocessingv.glsl
src/: BallObject.cpp  Game.cpp  GameLevel.cpp  GameObject.cpp  ParticleGenerator.cpp  PostProcessor.cpp  ResourceManager.cpp  Shader.cpp  SpriteRenderer.cpp  TextRenderer.cpp  Texture.cpp  compare.cxx  main.cpp
